war/src/main/webapp/engines/jahia-anthracite/_components.scss
/* ... */
/////////////////////////////////////////////////
// COMPARE PANEL ////////////////////////////////
/////////////////////////////////////////////////


.x-window.compare-engine {
	background: #616669 !important;

	.x-window-header {
		height: 64px !important;
		line-height: 64px;
		padding-left: 16px !important;
		margin-top: 5px;

		> .x-component:first-child {
			margin-top: 22px;
			margin-right: 16px;
			pointer-events: all;

			table tbody tr td .x-tool-close {
				height: 22px;
				width: 22px;
				background-image: url(./images/icon-close-large.png);
				background-position: initial !important;
			}

		}

		.x-window-header-text {
			text-shadow: none;
			border: none;
			padding: 0;
			border-radius: 0;
			background: transparent;
			box-shadow: none;
			margin-bottom: 10px;
			pointer-events: none !important;
			font-family: "Raleway", sans-serif;
			font-size: 24px;
			color: #f1f1f1;
			font-weight: 100;
		}

	}

	.x-panel-toolbar .x-tool-restore {
		display: none;
	}

	.x-panel-header,
	.x-toolbar {
		background: #818588;
		border: 1px solid #818588;
		color: #eee;
	}

	.x-panel-bwrap {

		button {
			margin-left: 10px;
			margin-bottom: 1px;

			img {
				background: url(./images/icons/ic_refresh.png) !important;
				background-size: 18px 18px !important;
				background-repeat: no-repeat !important;
				left: 0 !important;
				top: 0 !important;
				opacity: .64;
			}

		}

		.x-btn-mc button.x-btn-text {
			text-transform: uppercase;
			padding: 0 4px !important;
			font-weight: 500;
			color: #424242;
		}

		table.x-btn-pressed .x-btn-mc button.x-btn-text {
			color: #FFEB3B;
		}

	}

	.x-panel:last-child {
		border-left: 1px solid #818588;
	}

	.x-form-field-wrap.x-component {
		background: #EEEEEE;
		margin-left: 12px;
	}

	.action-bar-tool-item .x-btn-mc button.x-btn-text img {
		display: none;
	}

}



/////////////////////////////////////////////////
// TRANSLATION ENGINE ///////////////////////////
/////////////////////////////////////////////////


.translate-content-engine {
	background: #5c6164 !important;
	height: 100% !important;
	width: 100% !important;
	top: 0 !important;
	left: 0 !important;

	.mypanel.x-component .x-component {
		background: $COLOUR--WHITE_CLOUDS;
		width: 50% !important;
	}

	.x-window-header {
		height: 64px !important;
		line-height: 64px;
		padding-left: 16px !important;

		.x-window-header-text {
			font-size: 36px;
			color: #dddcdc;
			width: 250px;
			font-family: $FONT--FAMILY---RALEWAY;
			font-weight: $FONT--WEIGHT---EXTRALIGHT;
		}

		> .x-component:first-child {
			margin-top: 22px;
			margin-right: 16px;
			pointer-events: all;

			table tbody tr td .x-tool-close {
				height: 22px;
				width: 22px;
				background-image: url(./images/icon-close-large.png);
				background-position: initial !important;
			}

		}

	}

	.x-panel-toolbar .x-tool-maximize {
		display: none;
	}

	.x-border-panel.x-border-layout-ct {
		height: calc(100% - 64px) !important;
	}

	.x-window-bbar {

		&.x-window-bbar-noborder {
			display: block;
			position: fixed;
			bottom: 0;
			left: 0;
			background: #4a4d50;
			width: 100% !important;
			border-top: 1px solid #353739;
			box-shadow: inset 0px 13px 40px 0px rgba(38, 38, 38, 0.5);
			padding: 20px 0 0 20px;
			box-sizing: border-box;
			height: 72px;
		}

		.x-form-check-wrap {
			position: fixed !important;
			right: 20px;
			bottom: 26px;
		}

		.x-toolbar-left td.x-toolbar-cell:nth-child(2) button.x-btn-text {
			background: #00a0e3 !important;
			color: #f1f1f1 !important;
		}

	}

	.x-component.x-border-panel.x-border-layout-ct {

		> .x-component.x-border-panel > .x-component > table tbody td:first-child {
			position: absolute;
			left: 26px;
			top: 8px !important;
			background: radial-gradient(ellipse at bottom right, rgba(255, 255, 255, 0.07) 0%, rgba(255, 255, 255, 0) 70%);

			&:hover {
				background-color: rgba(255, 255, 255, 0.07);
			}

			.x-trigger-wrap-focus {
				background-color: rgba(255, 255, 255, 0.07);
			}

		}

		> .x-component.x-border-panel > .x-component > table tbody td.x-btn-mc:nth-child(2) {
			background: #6b7074;
			position: absolute;
			left: 200px;
			height: 30px;
			top: 9px;

			button {
				margin-top: 7px;
				color: #dddcdc;
				padding: 0 8px;
				width: auto !important;
			}

			&:hover {
				background: #798084 !important;
			}

		}

		.x-component.x-border-panel:nth-child(2) {
			margin-top: 28px;
			border-top: 1px dashed #8a8e91 !important;
		}

		&:nth-child(2) .x-panel-noborder.x-panel.x-component > .x-panel-bwrap {
			border-left: 10px solid #5c6164 !important;
		}

		.x-panel-noborder.x-panel.x-component > .x-panel-bwrap {

			textarea.x-form-field,
			input.x-form-field {
				background: #6b7074 !important;
				color: $COLOUR--WHITE;
				max-height: 54px !important;

				&:hover {
					background: #707679 !important;
				}

				&:focus {
					background: $COLOUR--WHITE !important;
					color: black !important;
				}

			}

			.x-form-readonly .x-form-field {
				background: #616669 !important;
				padding-left: 0 !important;
				width: 100% !important;

				&:hover,
				&:focus {
					cursor: default;
					background: #616669 !important;
					color: $COLOUR--WHITE !important;
				}

			}

		}

	}

	.x-form-trigger.x-form-trigger-arrow {
		height: 30px !important;
		width: 27px !important;
		background-color: transparent !important;
	}

	div[role="combobox"] .x-form-text {
		padding: 7px 20px 6px 10px !important;
		color: #f1f1f1;
		text-transform: uppercase;
		font-size: 11px;
		font-weight: 500;
		background: transparent;
	}

	fieldset:last-child {
		margin-bottom: 0 !important;
	}

	.x-form-twin-triggers .x-form-trigger.x-form-trigger-arrow {
		height: 24px !important;
		width: 17px !important;
	}

}

